# AI-NRF1-byte

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONSTITUTION_BASE.md  CONSTITUTION_MODULES.md  CONTRIBUTING.md  Cargo.toml  DIAGNOSTIC.md  GUIA-GERADOR-DE-PRODUTOS.md  ISSUES.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANIFESTO.md  MERGE_LOG.md  MERGE_MANIFEST.json  MERGE_STEP43.txt  Makefile  PATCHES_APPLIED.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.1.0.md  SECURITY.md  TASKLIST.md  ecosystem.config.js  series 10.md  series 11.md  series 2.md  series 3.md  series 4.md  series 5.md  series 6.md  series 7.md  series 8.md  series 9.md  série 1.md
.github/: CODEOWNERS  dependabot.yml  labels.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
DanSkills/: .env.example  README.md  README_DanSkills.md  Skill.md  blueprint.yaml
EXTRACTED/: MANIFEST.md
_conflicts/: CONTRIBUTING.md  README.md  SECURITY.md
_patch/: README_PATCH.md
benches/: Cargo.toml
benches/benches/: codec.rs
benches/llm/scorer/: compiles-tests.yaml  structure-coverage.yaml
bindings/wasm/ai-nrf1-wasm/: Cargo.toml  README.md
bindings/wasm/ai-nrf1-wasm/src/: lib.rs
bindings/wasm/ubl-capsule-wasm/: Cargo.toml
bindings/wasm/ubl-capsule-wasm/src/: lib.rs
cli/nrf1/: Cargo.toml
cli/nrf1/src/: main.rs
conformance/: README.md  allowlist.json  manifest.json
crates/module-runner/: Cargo.toml
crates/module-runner/src/: assets.rs  bindings.rs  cap_registry.rs  effects.rs  errors.rs  lib.rs  manifest.rs  runner.rs
crates/module-runner/src/adapters/: http.rs  idem.rs  llm.rs  mod.rs  permit.rs  permit_http.rs  resume.rs  signer.rs
crates/module-runner/tests/: dispatch_integration.rs  e2e.rs
crates/modules-core/: Cargo.toml
crates/modules-core/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/ubl-auth/: Cargo.toml
crates/ubl-auth/src/: lib.rs
crates/ubl-error/: Cargo.toml
crates/ubl-error/src/: lib.rs
crates/ubl-model/: Cargo.toml
crates/ubl-model/src/: lib.rs
crates/ubl-storage/: Cargo.toml
crates/ubl-storage/src/: ledger.rs  lib.rs  ndjson.rs  s3.rs
deploy/: .env.production  .gitignore  ecosystem.config.js  go-live.sh  install_from_release.sh  setup.sh  smoke-test.sh
docs/: AUDIT-2026-02.md  CONTRACT.md  DECIMALS-AND-NUMBERS.md  GHOST_LIFECYCLE.md  LLM-FIRST-AUDIT.md  MILESTONE-AUDIT.md  MODULE-LAYERING.md  MODULES-DESIGN.md  OPERATIONS.md  PRODUCT-ARCHITECTURE.md  README.md
examples/: README.md  array_true_42.hex  empty_array.hex  empty_map.hex  empty_string.hex  hello.hex  int42.hex  model-card.json  null.hex  receipt.demo.json  true.hex
impl/rust/ai-nrf1/: Cargo.toml  README.md
impl/rust/ai-nrf1/src/: compat_cbor.rs  lib.rs
impl/rust/ai-nrf1/tests/: cbor_compat.rs  roundtrip.rs
impl/rust/nrf-core/: Cargo.toml  README.md
impl/rust/nrf-core/fuzz/: Cargo.toml  README.md
impl/rust/nrf-core/fuzz/corpus/decode_value/: auto_array_empty.hex  auto_empty_map.hex  auto_int_0.hex  auto_int_42.hex  auto_int_minus1.hex  auto_map_name_value.hex  auto_trailing_data.hex  auto_truncated_int.hex
impl/rust/nrf-core/fuzz/fuzz_targets/: decode_value.rs  varint32.rs
impl/rust/nrf-core/src/: lib.rs  rho.rs
impl/rust/nrf-core/tests/: conformance.rs
impl/rust/signers/: Cargo.toml
impl/rust/signers/src/: lib.rs
impl/rust/ubl_capsule/: Cargo.toml
impl/rust/ubl_capsule/src/: id.rs  lib.rs  metrics_support.rs  receipt.rs  seal.rs  types.rs
impl/rust/ubl_capsule/tests/: integration.rs  vectors_signed.rs
modules/cap-enrich/: Cargo.toml
modules/cap-enrich/src/: lib.rs
modules/cap-intake/: Cargo.toml
modules/cap-intake/src/: lib.rs
modules/cap-invoice/: Cargo.toml
modules/cap-invoice/src/: lib.rs  store.rs  types.rs
modules/cap-llm/: Cargo.toml
modules/cap-llm/src/: lib.rs
modules/cap-permit/: Cargo.toml
modules/cap-permit/src/: lib.rs
modules/cap-policy/: Cargo.toml
modules/cap-policy/src/: lib.rs
modules/cap-pricing/: Cargo.toml
modules/cap-pricing/src/: api.rs  config.rs  engine.rs  lib.rs
modules/cap-quote/: Cargo.toml
modules/cap-quote/src/: lib.rs
modules/cap-transport/: Cargo.toml
modules/cap-transport/src/: lib.rs
modules/receipt-gateway/: Cargo.toml
modules/receipt-gateway/src/: lib.rs
pacotao-total-union/: README.md  README.md.from-hardening  README.md.from-tdln-ubl
schemas/: ai-json-nrf1.v0.1.1.json  ghost.v1.json  model-card.v1.json  product.v1.json  reasoning.bit.v1.1.json  reasoning.bit.v1.json  reasoning.bit.v1.json.bak  receipt.v1.json  ubl-json.v1.json
scripts/: check_receipt_fields.sh  extract_to_staging.py  gen_samples.sh  keygen_ed25519.py  make_autobundle.sh  make_checksums.sh  nrf1_check.py  polish_design_doc.py  sbom.sh  setup_labels.sh
services/registry/: .env.example  Cargo.toml
services/registry/src/: lib.rs  main.rs  state.rs
services/registry/src/middleware/: README.md  api_key.rs  identity.rs  mod.rs  rate_limit.rs  rbac.rs
services/registry/src/routes/: cap_http.rs  ghosts.rs  mod.rs  modules.rs  receipts.rs  receipts_UPLOAD_NOTE.rs
services/registry/tests/: integration.rs
specs/: NRF-1.1-Benefits.md  NRF-1.1-Interop.md  NRF-1.1-LLM-First.md  NRF-1.1-test-vectors.md  NRF-1.1.md  NRF-Receipts.md  Receipt-v1.md  ai-nrf1-json-mapping.md  ai-nrf1-mapping-json.md  nrf1.1-llm-guide.md  nrf1.1-security-considerations.md  receipt-enrichments.md  rho-to-nrf-transistor.md  security-considerations.md
templates/: receipt.example.llm-engine.json  receipt.example.llm-smart.json
tests/: receipt_schema_ok.rs
tests/base_conformance/: Cargo.toml
tests/base_conformance/src/: lib.rs
tests/base_conformance/tests/: conformance.rs
tools/: README.md  compress-ledger.sh  migrate-bytes-json.sh  sbom.py  sbom_cyclonedx.py
tools/nrf1-cli/: Cargo.toml  README.md
tools/nrf1-cli/src/: judge.rs  keys.rs  main.rs  verify_cmd.rs
tools/nrf1-cli/tests/: mapping_roundtrip.rs
tools/ubl-cli/: Cargo.toml
tools/ubl-cli/src/: execute.rs  llm.rs  main.rs  modules.rs  pricing.rs
tools/ubl-cli/tests/: cli_smoke.rs
workers/: cloudflare-signer.ts
(+337 files in other folders)
