[package]
name = "ai-nrf1-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
nrf-core = { path = "../impl/rust/nrf-core" }
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

[[bench]]
name = "codec"
harness = false
