
[package]
name = "nrf1-cli"
version = "0.3.9"
edition = "2021"

[[bin]]
name = "nrf1"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features=["derive"] }
serde_json = "1"
anyhow = "1"
zip = "0.6"
blake3 = "1"
nrf-core = { path = "../../impl/rust/nrf-core" }
unicode-normalization = "0.1"
