[package]
name = "modules-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Module contract layer: Capability trait, CapInput/CapOutput, Verdict, Effect, AssetResolver"

[dependencies]
nrf1 = { path = "../../crates/nrf1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
