
[package]
name = "ubl-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }
http = "1"
time = "0.3"
tracing = "0.1"
regex = "1"
