
[package]
name = "ubl-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
tokio = { version = "1", features = ["macros", "fs", "io-util", "rt"] }
flate2 = "1"
tracing = "0.1"
anyhow = "1"

# S3 (optional — only needed if you use S3Store directly)
aws-config = { version = "1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
s3 = ["dep:aws-config", "dep:aws-sdk-s3"]
