[package]
name = "cap-permit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "cap-permit: K-of-N consent flow with ticket lifecycle"

[dependencies]
modules-core = { path = "../../crates/modules-core" }
nrf1 = { path = "../../crates/nrf1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
