[package]
name = "cap-pricing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pricing engine: SKU lists, discount/surcharge rules, tax, rounding"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
regex = "1"
