
[package]
name = "registry"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v7", "v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
# BASE crates
nrf-core = { path = "../../impl/rust/nrf-core" }
nrf1 = { path = "../../crates/nrf1" }
ubl_json_view = { path = "../../impl/rust/ubl_json_view" }
receipt = { path = "../../crates/receipt" }
ghost = { path = "../../crates/ghost" }
runtime = { path = "../../crates/runtime" }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
blake3 = "1"
rand = "0.8"
hex = "0.4"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ubl-storage = { path = "../../crates/ubl-storage" }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# --- MODULES feature: compiles cap modules + runner into the same binary ---
module-runner = { path = "../../crates/module-runner", features = ["server", "live"], optional = true }
serde_yaml = { version = "0.9", optional = true }
modules-core = { path = "../../crates/modules-core", optional = true }
cap-intake = { path = "../../modules/cap-intake", optional = true }
cap-policy = { path = "../../modules/cap-policy", optional = true }
cap-permit = { path = "../../modules/cap-permit", optional = true }
cap-enrich = { path = "../../modules/cap-enrich", optional = true }
cap-transport = { path = "../../modules/cap-transport", optional = true }
cap-llm = { path = "../../modules/cap-llm", optional = true }
cap-pricing = { path = "../../modules/cap-pricing", optional = true }
cap-quote = { path = "../../crates/cap-quote", optional = true }
cap-invoice = { path = "../../crates/cap-invoice", optional = true }

[features]
default = []
modules = [
  "module-runner",
  "modules-core",
  "serde_yaml",
  "cap-intake",
  "cap-policy",
  "cap-permit",
  "cap-enrich",
  "cap-transport",
  "cap-llm",
  "cap-pricing",
  "cap-quote",
  "cap-invoice",
]

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
