[package]
name = "ubl-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UBL Capsule CLI: canon, hash, sign, verify, receipt hops"

[[bin]]
name = "ubl"
path = "src/main.rs"

[dependencies]
nrf-core = { path = "../../impl/rust/nrf-core" }
ubl_json_view = { path = "../../impl/rust/ubl_json_view" }
ubl_capsule = { path = "../../impl/rust/ubl_capsule" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8", "pem"] }
rand_core = { version = "0.6", features = ["getrandom"] }
blake3 = "1"
anyhow = "1"
