[package]
name = "ai-nrf1-wasm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "WASM bindings for ai-nrf1 canonical encoder/decoder/hash"
repository = "https://github.com/danvoulez/AI-NRF1-byte"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nrf-core = { path = "../../../impl/rust/nrf-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Note: profile settings belong in workspace root Cargo.toml
