[package]
name = "nrf-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "ai-nrf1 (UBL-Byte) canonical encoder/decoder and hash utilities"
repository = "https://example.com/AI-NRF1"

[dependencies]
blake3 = "1"
thiserror = "1"
unicode-normalization = "0.1"
serde = { version = "1", features = ["derive"] }
regex = "1"

[features]
fuzz_expose = []
