
[package]
name = "signers"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
rand_core = "0.6"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hex = "0.4"
blake3 = "1"
anyhow = "1"
nrf-core = { path = "../nrf-core" }
